# personal_accountant_TelegramBot

./: .env.example  .gitignore  API.md  CONTRIBUTING.md  DATA_MODEL.md  DEPLOYMENT.md  Dockerfile  PRIVACY_POLICY.md  README.md  RUNBOOK.md  USER_GUIDE.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
alembic/: env.py
app/: __init__.py  api.py  bot.py  config.py  container.py  db.py  main.py  polling.py  repositories.py  schemas.py  tasks.py
app/services/: analytics.py  budgets.py  categories.py  currency.py  ocr.py  receipts.py  speech.py  storage.py
tests/: test_analytics.py  test_bot.py  test_budgets.py  test_currency.py  test_receipt_parser.py  test_receipts.py  test_speech.py
