[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "receiptbot"
version = "0.1.0"
description = "Telegram bot for receipt OCR, budgeting and spend analytics"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Codex" }
]
dependencies = [
  "aiogram>=3.15.0",
  "aioboto3>=13.4.0",
  "alembic>=1.14.0",
  "asyncpg>=0.30.0",
  "celery[redis]>=5.4.0",
  "fastapi>=0.115.0",
  "google-cloud-speech>=2.27.0",
  "google-cloud-vision>=3.10.0",
  "httpx>=0.28.0",
  "orjson>=3.10.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "python-dateutil>=2.9.0",
  "python-multipart>=0.0.18",
  "aiosqlite>=0.20.0",
  "sqlalchemy>=2.0.36",
  "structlog>=24.4.0",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
